--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ Your browser does not support the HTML canvas tag.
 
 	</article>
 <section class="test">
-	<h3>Reminders:</h3> <button float="right" type="button" onclick="myFunction()">Click Me!</button>
+	 <button type="button" onclick="myFunction()">Click Me!</button>
 	  <p id="demo">Self-Care Tip for the Week!</p>  
 	
 	<audio controls>
