--- a/index.html
+++ b/index.html
@@ -158,8 +158,10 @@ Your browser does not support the HTML canvas tag.
 	<audio controls>
    <source src="Asset/iam.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
-</audio>
-	
+		</audio> 
+	 <label for="email">Email:</label>
+  <input type="test" id="email" name="email" value="">
+  <input type="submit" value="Submit">
 	</section>
 <footer>
     <h4>Made By Nicole Tey</h4><br>
