--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ a:link {
 <script>
 function myFunction() { 
   document.getElementById("demo").innerHTML = "Take 10 minutes each day to practice deep breathing or mindfulness to reduce stress and elevate your mood.";
+	
 }
 </script>
 </head>
@@ -88,9 +89,26 @@ function myFunction() {
   </article>
 	
   <section>
-	  <canvas id="myCanvas" width="200" height="100" style="border:1px solid #767070;">
+	  <form action="/action_page.php">
+		  <label for="cars"><b>Do you practice <i>Self Care</i></b>?</label>
+  <select id="Practice Self Care" name="Practice Self Care">
+    <option value="volvo">Often</option>
+    <option value="saab">Sometimes</option>
+    <option value="fiat">Not really</option>
+    <option value="audi">No</option>
+  </select>
+  <input type="submit">
+</form>
+	  <canvas id="myCanvas" width="100" height="100" style="border:1px solid #767070;">
 Your browser does not support the HTML canvas tag.
-</canvas>
+	 </canvas>
+<script>
+var c = document.getElementById("myCanvas");
+var ctx = c.getContext("2d");
+ctx.moveTo(0,0);
+ctx.lineTo(100,100);
+ctx.stroke();
+</script>
 
 	<table>
 			<caption>How are we doing with Self Care?</caption>
